added home,login,register,dashboard routes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,6 @@ body {
     @apply border-border m-0 p-0 box-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground mx-auto max-w-screen-2xl min-h-dvh;
   }
 }
