--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,9 @@ body {
 
 @layer base {
   :root {
+    --blue: 216 85% 34%;
+    --orange: 35 85% 50%;
+
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
