--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,6 @@ body {
     @apply border-border m-0 p-0 box-border;
   }
   body {
-    @apply bg-background text-foreground mx-auto max-w-screen-2xl min-h-dvh;
+    @apply bg-slate-100 text-slate-800 mx-auto max-w-screen-2xl min-h-dvh;
   }
 }
